tests/invalid/const_without_initializer.lang
module main

const my_const: i32;
